force-app/main/default/objects/Car__c/fields/Date_of_Next_Technical_Review__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Next_Technical_Review__c</fullName>
    <label>Date of Next Technical Review</label>
    <type>Date</type>
</CustomField>