force-app/main/default/objects/Car__c/fields/Old_Price__c.field-meta.xml
<CustomField>
    <fullName>Old_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Old_Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>