force-app/main/default/objects/Car__c/fields/Year_of_Manufacture__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Manufacture__c</fullName>
    <label>Year of Manufacture</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;1960</fullName>
            </value>
            <value>
                <fullName>1960</fullName>
            </value>
            <value>
                <fullName>1961</fullName>
            </value>
            <value>
                <fullName>1962</fullName>
            </value>
            <value>
                <fullName>1963</fullName>
            </value>
            <value>
                <fullName>1964</fullName>
            </value>
            <value>
                <fullName>1965</fullName>
            </value>
            <value>
                <fullName>1966</fullName>
            </value>
            <value>
                <fullName>1967</fullName>
            </value>
            <value>
                <fullName>1968</fullName>
            </value>
            <value>
                <fullName>1969</fullName>
            </value>
            <value>
                <fullName>1970</fullName>
            </value>
            <value>
                <fullName>1971</fullName>
            </value>
            <value>
                <fullName>1972</fullName>
            </value>
            <value>
                <fullName>1973</fullName>
            </value>
            <value>
                <fullName>1974</fullName>
            </value>
            <value>
                <fullName>1975</fullName>
            </value>
            <value>
                <fullName>1976</fullName>
            </value>
            <value>
                <fullName>1977</fullName>
            </value>
            <value>
                <fullName>1978</fullName>
            </value>
            <value>
                <fullName>1979</fullName>
            </value>
            <value>
                <fullName>1980</fullName>
            </value>
            <value>
                <fullName>1981</fullName>
            </value>
            <value>
                <fullName>1982</fullName>
            </value>
            <value>
                <fullName>1983</fullName>
            </value>
            <value>
                <fullName>1984</fullName>
            </value>
            <value>
                <fullName>1985</fullName>
            </value>
            <value>
                <fullName>1986</fullName>
            </value>
            <value>
                <fullName>1987</fullName>
            </value>
            <value>
                <fullName>1988</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>