force-app/main/default/objects/Car__c/validationRules/Check_Next_Technical_Review_Is_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Next_Technical_Review_Is_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Date_of_Next_Technical_Review__c &lt;   DATEVALUE(  NOW()  )</errorConditionFormula>
    <errorMessage>NEXT TECHNICAL REVIEW MUST BE IN FUTURE</errorMessage>
</ValidationRule>